@@ -1,4 +1,10 @@
-008-07-15  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>
+2008-07-16  Marco van den Heuvel  <blackystardust68@yahoo.com>
+
+        * arch/beos/ui.cc, arch/beos/ui_file.cc,
+        arch/beos/vicemenu.cc: Added fixes as provided by
+        Marcus Sutton <loggedoubt@gmail.com>
+
+2008-07-15  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>
 
 	* arch/win32/kbd.c: In kbd_handle_keydown() and
 	kbd_handle_keyup(), filter out keystrokes if the happen because
